rename share api and add more endpoints
